# invest-os

./: .gitignore  CLASSIFIERS.txt  README.md  pyproject.toml  refatorar.md
.github/workflows/: ci.yml
corpora/raw/: 20260609_002319_refatoracao.md
docs/: 00-filosofema.md  01-ontologia.md  02-matematica.md  03-pipeline.md  04-kairos.md  05-governanca.md
invest_os/: __init__.py  cli.py
invest_os/capitals/: __init__.py  dimensions.py  grid.py
invest_os/core/: capital_grid.py  metrics.py
invest_os/entities/: __init__.py  base.py
invest_os/governance/: engine.py
invest_os/learning/: __init__.py  drift.py  rlhf.py
invest_os/models/: schemas.py
invest_os/pipeline/: cognitive.py
invest_os/prompts/: engine.py  router.py
invest_os/scores/: __init__.py
invest_os/scores/axiological/: __init__.py
invest_os/scores/decisional/: __init__.py
invest_os/scores/descriptive/: __init__.py
invest_os/scores/interpretive/: __init__.py
invest_os/signals/: __init__.py  base.py
invest_os/utils/: math_tools.py
prompts/repository/: level0_context.md  level1_financial_dd.md  level2_regenerative_dd.md  level3_semiotic.md  level4_axiological.md  level5_rlhf.md
tests/: conftest.py  fixtures.py  test_capital_grid.py  test_capitals.py  test_cli.py  test_entities.py  test_governance.py  test_integration.py  test_learning.py  test_math_tools.py  test_metrics.py  test_pipeline.py  test_prompts.py  test_prompts_router.py  test_regression.py  test_scores.py  test_signals.py  test_smoke.py  test_system.py
